Update and rename index.html to photoupload.html

--- a/photoupload.html
+++ b/photoupload.html
@@ -80,7 +80,9 @@
             <b class="b2">傳送</b>
         </div>
         <div class="container">
-            <b class="b2">取消</b>
+            <a href="landingindex.html">
+                <b class="b2">取消</b>
+            </a>
         </div>
         <div class="section-link">
         </div>
