--- a/landingindex.html
+++ b/landingindex.html
@@ -32,11 +32,10 @@
       border-right: 1px solid #ddd;
       overflow-y: auto;
     }
-    .sidebar-screenshot {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
+  <a href="family-hall.html">
+      <img src="images/family-hall.jpg" class="sidebar-screenshot" alt="Family Hall Image">
+  </a>
+
     .main {
       flex-grow: 1;
       overflow-y: auto;
