--- a/landingindex.html
+++ b/landingindex.html
@@ -32,9 +32,11 @@
       border-right: 1px solid #ddd;
       overflow-y: auto;
     }
-  <a href="family-hall.html">
-      <img src="images/family-hall.jpg" class="sidebar-screenshot" alt="Family Hall Image">
-  </a>
+  screenshot {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
 
     .main {
       flex-grow: 1;
