--- a/landingindex.html
+++ b/landingindex.html
@@ -62,7 +62,9 @@
   </div>
   <div class="container">
     <div class="sidebar">
-      <img src="assets/sidebar.png" alt="Sidebar Screenshot" class="sidebar-screenshot">
+      <a href="family-hall.html">
+  <img src="assets/sidebar.png" alt="Sidebar Screenshot" class="sidebar-screenshot">
+  </a>
     </div>
     <div class="main">
       <div class="language-path">
